# astra-cohere-embed-4

./: README.md  cohere_embed4.ipynb  pyproject.toml
