[project]
name = "astra-cohere-embed-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astrapy>=2.0.1",
    "cohere>=5.15.0",
    "jupyter>=1.1.1",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
